实现了画廊图片的展示等一些细节和图片下载，图片加载底部加载等待显示框实现

--- a/pagergallerysave/src/main/res/values/strings.xml
+++ b/pagergallerysave/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">PagerGallerySave</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="save_icon">save_icon</string>
+    <string name="photo_tag">%d / %d</string>
 </resources>
